--- a/SurveyEducation/Views/Home/Index.cshtml
+++ b/SurveyEducation/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="main-wrapper ">
+﻿<div class="main-wrapper ">
     <!-- Slider Start -->
     <section class="slider">
         <div class="container">
@@ -66,7 +65,7 @@
                             <h4 class="mb-3 position-relative">Chúng tôi là người tạo ra các cuộc khảo sát</h4>
                             <p class="mb-5">Chúng tôi cung cấp các khảo sát thực tế sát với thực tế hiện nay nhất, để người tham gia khảo sát có thể đưa ra giải pháp tốt nhất để khắc phục tình trạng khó xử xung quanh cuộc sống hàng ngày ...</p>
 
-                            <a href="#" class="btn btn-main btn-round-full">Bắt đâù </a>
+                            <a href="#" class="btn btn-main btn-round-full">Bắt đầu </a>
                         </div>
                     </div>
                 </div>
@@ -268,12 +267,12 @@
 
                         <div class="card-body mt-2">
                             @*<div class="blog-item-meta">
-                                <a href="#" class="text-white-50">Design<span class="ml-2 mr-2">/</span></a>
-                                <a href="#" class="text-white-50">Ui/Ux<span class="ml-2">/</span></a>
-                                <a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
-                            </div>*@
+                                    <a href="#" class="text-white-50">Design<span class="ml-2 mr-2">/</span></a>
+                                    <a href="#" class="text-white-50">Ui/Ux<span class="ml-2">/</span></a>
+                                    <a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
+                                </div>*@
 
-                            <h3 class="mt-3 mb-5 lh-36"><a href="https://canhquansaigon.com/nhung-giai-phap-giup-cai-thien-moi-truong-song/" class="text-white ">Giải pháp giúp cải thiện môi trường sống</a></h3>
+                            <h3 class="mt-3 mb-5 lh-36" style="height:200px"><a href="https://canhquansaigon.com/nhung-giai-phap-giup-cai-thien-moi-truong-song/" class="text-white ">Giải pháp giúp cải thiện môi trường sống</a></h3>
 
                             <a href="https://canhquansaigon.com/nhung-giai-phap-giup-cai-thien-moi-truong-song/" class="btn btn-small btn-solid-border btn-round-full text-white">Tìm hiểu thêm</a>
                         </div>
@@ -286,12 +285,12 @@
 
                         <div class="card-body mt-2">
                             @*<div class="blog-item-meta">
-                                <a href="#" class="text-white-50">Design<span class="ml-2 mr-2">/</span></a>
-                                <a href="#" class="text-white-50">Ui/Ux<span class="ml-2">/</span></a>
-                                <a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
-                            </div>*@
+                                    <a href="#" class="text-white-50">Design<span class="ml-2 mr-2">/</span></a>
+                                    <a href="#" class="text-white-50">Ui/Ux<span class="ml-2">/</span></a>
+                                    <a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
+                                </div>*@
 
-                            <h3 class="mt-3 mb-5 lh-36"><a href="https://onghutcobang.vn/chung-ta-can-lam-gi-de-bao-ve-moi-truong-hien-nay/" class="text-white">Chúng ta cần làm gì để bảo vệ môi trường hiện nay?</a></h3>
+                            <h3 class="mt-3 mb-5 lh-36" style="height:200px"><a href="https://onghutcobang.vn/chung-ta-can-lam-gi-de-bao-ve-moi-truong-hien-nay/" class="text-white">Chúng ta cần làm gì để bảo vệ môi trường hiện nay?</a></h3>
 
                             <a href="https://onghutcobang.vn/chung-ta-can-lam-gi-de-bao-ve-moi-truong-hien-nay/" class="btn btn-small btn-solid-border btn-round-full text-white">Tìm hiểu thêm </a>
                         </div>
@@ -304,12 +303,12 @@
 
                         <div class="card-body mt-2">
                             @*<div class="blog-item-meta">
-                                <a href="#" class="text-white-50">Design<span class="ml-2 mr-2">/</span></a>
-                                <a href="#" class="text-white-50">Ui/Ux<span class="ml-2">/</span></a>
-                                <a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
-                            </div>*@
+                                    <a href="#" class="text-white-50">Design<span class="ml-2 mr-2">/</span></a>
+                                    <a href="#" class="text-white-50">Ui/Ux<span class="ml-2">/</span></a>
+                                    <a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
+                                </div>*@
 
-                            <h3 class="mt-3 mb-5 lh-36"><a href="https://vksndtc.gov.vn/tin-tong-hop/chien-luoc-bao-ve-moi-truong-quoc-gia-den-nam-2030-d8-t10145.html" class="text-white">Chiến lược bảo vệ môi trường quốc gia đến năm 2030, tầm nhìn đến năm 2050</a></h3>
+                            <h3 class="mt-3 mb-5 lh-36" style="height:200px"><a href="https://vksndtc.gov.vn/tin-tong-hop/chien-luoc-bao-ve-moi-truong-quoc-gia-den-nam-2030-d8-t10145.html" class="text-white">Chiến lược bảo vệ môi trường quốc gia đến năm 2030, tầm nhìn đến năm 2050</a></h3>
 
                             <a href="https://vksndtc.gov.vn/tin-tong-hop/chien-luoc-bao-ve-moi-truong-quoc-gia-den-nam-2030-d8-t10145.html" class="btn btn-small btn-solid-border btn-round-full text-white">Tìm hiểu thêm </a>
                         </div>
