--- a/SurveyEducation/Views/Shared/_Footer.cshtml
+++ b/SurveyEducation/Views/Shared/_Footer.cshtml
@@ -40,9 +40,9 @@
             <div class="col-lg-3 ml-auto col-sm-6">
                 <div class="widget">
                     <div class="logo mb-4">
-                        <h3>Mega<span>kit.</span></h3>
+                        <h3>Survey<span>Education.</span></h3>
                     </div>
-                    <h6><a href="tel:+23-345-67890">Support@megakit.com</a></h6>
+                    <h6><a href="tel:+23-345-67890">Support@survey.com</a></h6>
                     <a href="mailto:support@gmail.com"><span class="text-color h4">+23-456-6588</span></a>
                 </div>
             </div>
