--- a/SurveyEducation/Areas/Admin/Views/Accounts/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Accounts/Create.cshtml
@@ -11,7 +11,6 @@
     <div class="card m-4">
         <div class="card-header">
             <h4 class="fw-bold py-3"><span class="text-muted fw-light">Quản lý tài khoản /</span> Tạo mới tài khoản</h4>
-
         </div>
         <div class="card-body">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -109,7 +108,7 @@
 
                 <div class="form-group col-md-6">
                     <div class="col-md-offset-2 col-md-12 d-flex justify-content-end">
-                        <input type="submit" value="Create" class="btn btn-outline-success" />
+                        <input type="submit" value="Create" class="btn btn-success" />
                     </div>
                 </div>
             </div>
