--- a/SurveyEducation/Areas/Admin/Views/Accounts/Edit.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Accounts/Edit.cshtml
@@ -169,18 +169,17 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        <div class="row  mt-2">
+            <div class="form-group col-md-6">
+                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
+            </div>
+
+            <div class="form-group col-md-6">
+                <div class="col-md-offset-2 col-md-12 d-flex justify-content-end">
+                    <input type="submit" value="Save" class="btn btn-success" />
+                </div>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
