--- a/SurveyEducation/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Accounts/Index.cshtml
@@ -145,16 +145,16 @@
                         @Html.DisplayFor(modelItem => item.DateOfJoining)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning" })
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary mt-1" })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger mt-1" })
                     </td>
                 </tr>
             }
 
         </table>
 
-        <div class="row ms-3">
+        <div class="row mt-3 ms-1">
             Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
             @Html.PagedListPager(Model, page => Url.Action("Index",
