--- a/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
@@ -81,7 +81,7 @@
         </li>
         <li class="menu-item">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-dock-top"></i>
+                <i class='menu-icon tf-icons bx bxs-user-account'></i>
                 <div data-i18n="Account Settings">Quản lý tài khoản</div>
             </a>
             <ul class="menu-sub">
@@ -91,8 +91,26 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="Index" class="menu-link">
+                    <a href="/Admin/Accounts/Index" class="menu-link">
                         <div data-i18n="Notifications">Danh sách tài khoản</div>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="menu-item">
+            <a href="/Admin/Blogs/Create" class="menu-link menu-toggle">
+                <i class='menu-icon tf-icons bx bxl-blogger'></i>
+                <div data-i18n="Boxicons">Quản lý Blog</div>
+            </a>
+            <ul class="menu-sub">
+                <li class="menu-item">
+                    <a href="/Admin/Blogs/Create" class="menu-link">
+                        <div data-i18n="Account">Tạo mới Blog</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="/Admin/Blogs/Index" class="menu-link">
+                        <div data-i18n="Account">Danh sách Blog</div>
                     </a>
                 </li>
             </ul>
@@ -101,6 +119,12 @@
             <a href="/Admin/Survey/StatisticSurveys" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
                 <div data-i18n="Account Settings">Báo cáo thống kê</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a href="/Admin/Contacts/Index" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
+                <div data-i18n="Account Settings">Danh sách liên hệ</div>
             </a>
         </li>
     </ul>
