--- a/SurveyEducation/Areas/Admin/Views/Survey/Delete.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Delete.cshtml
@@ -77,7 +77,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color m-4">
-            <input type="submit" value="Delete" class="btn btn-outline-danger" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
         </div>
     }
