--- a/SurveyEducation/Areas/Admin/Views/Survey/Edit.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Edit.cshtml
@@ -85,7 +85,7 @@
 
                 <div class="form-group col-md-6">
                     <div class="col-md-offset-2 col-md-12 d-flex justify-content-end">
-                        <input type="submit" value="Save" class="btn btn-outline-success"/>
+                        <input type="submit" value="Save" class="btn btn-success"/>
                     </div>
                 </div>
             </div>
