--- a/SurveyEducation/Areas/Admin/Views/Survey/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Index.cshtml
@@ -21,7 +21,7 @@
         <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Quản lý Survey /</span> Danh sách Survey</h4>
     </div>
     <div class="row m-3">
-        @using (Html.BeginForm("Index", "Accounts", FormMethod.Get, new { @class = "col-md-6" }))
+        @using (Html.BeginForm("Index", "Survey", FormMethod.Get, new { @class = "col-md-6" }))
         {
             <div class="form-group d-flex">
                 <label class="col-md-3 mt-2">Find by keyword</label>
@@ -70,9 +70,9 @@
                             @Html.DisplayFor(modelItem => item.Tag)
                         </td>*@
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new {@class = "btn btn-warning" })
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
                     </td>
                 </tr>
             }
