--- a/SurveyEducation/Views/Home/Blog.cshtml
+++ b/SurveyEducation/Views/Home/Blog.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<SurveyEducation.Models.Blog>
 <div class="main-wrapper ">
-    <section class="page-title bg-1">
+    @*<section class="page-title bg-1">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -16,84 +16,37 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>*@
 
     <section class="section blog-wrap bg-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="row">
-                        <div class="col-lg-6 col-md-6 mb-5">
-                            <div class="blog-item">
-                                <img src="images/blog/1.jpg" alt="" class="img-fluid rounded">
+                        @foreach (var item in Model)
+                        {
+                            <div class="col-lg-6 col-md-6 mb-5">
+                                <div class="blog-item">
+                                    <img src="@item.Thumbnail" alt="" class="img-fluid rounded">
 
-                                <div class="blog-item-content bg-white p-4">
-                                    <div class="blog-item-meta  py-1 px-2">
-                                        <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Creativity</span>
+                                    <div class="blog-item-content bg-white p-4">
+                                        @*<div class="blog-item-meta  py-1 px-2">
+                                            <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Creativity</span>
+                                        </div>*@
+
+                                        <h3 class="mt-3 mb-3"><a href="BlogDetails/@item.Id">@item.Title</a></h3>
+                                        <p class="mb-4">@item.Description</p>
+
+                                        <a href="BlogDetails/@item.Id" class="btn btn-small btn-main btn-round-full">Learn More</a>
                                     </div>
-
-                                    <h3 class="mt-3 mb-3"><a href="blog-single.html">Improve design with typography?</a></h3>
-                                    <p class="mb-4">Non illo quas blanditiis repellendus laboriosam minima animi. Consectetur accusantium pariatur repudiandae!</p>
-
-                                    <a href="Home/BlogDetails/${id}" class="btn btn-small btn-main btn-round-full">Learn More</a>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="col-lg-6 col-md-6 mb-5">
-                            <div class="blog-item">
-                                <img src="images/blog/2.jpg" alt="" class="img-fluid rounded">
-
-                                <div class="blog-item-content bg-white p-4">
-                                    <div class="blog-item-meta py-1 px-2">
-                                        <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Design</span>
-                                    </div>
-
-                                    <h3 class="mt-3 mb-3"><a href="blog-single.html">Interactivity connect consumer</a></h3>
-                                    <p class="mb-4">Non illo quas blanditiis repellendus laboriosam minima animi. Consectetur accusantium pariatur repudiandae!</p>
-
-                                    <a href="Home/BlogDetails/${id}" class="btn btn-small btn-main btn-round-full">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-6 col-md-6 mb-5">
-                            <div class="blog-item">
-                                <img src="images/blog/3.jpg" alt="" class="img-fluid rounded">
-
-                                <div class="blog-item-content bg-white p-4">
-                                    <div class="blog-item-meta py-1 px-2">
-                                        <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Community</span>
-                                    </div>
-
-                                    <h3 class="mt-3 mb-3"><a href="blog-single.html">Marketing Strategy to bring more affect</a></h3>
-                                    <p class="mb-4">Non illo quas blanditiis repellendus laboriosam minima animi. Consectetur accusantium pariatur repudiandae!</p>
-
-                                    <a href="Home/BlogDetails/${id}" class="btn btn-small btn-main btn-round-full">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 mb-5">
-                            <div class="blog-item">
-                                <img src="images/blog/4.jpg" alt="" class="img-fluid rounded">
-
-                                <div class="blog-item-content bg-white p-4">
-                                    <div class="blog-item-meta py-1 px-2">
-                                        <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Marketing</span>
-                                    </div>
-
-                                    <h3 class="mt-3 mb-3"><a href="blog-single.html">Marketing Strategy to bring more affect</a></h3>
-                                    <p class="mb-4">Non illo quas blanditiis repellendus laboriosam minima animi. Consectetur accusantium pariatur repudiandae!</p>
-
-                                    <a href="BlogDetails/${id}" class="btn btn-small btn-main btn-round-full">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
+                        }
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="sidebar-wrap">
-                        <div class="sidebar-widget search card p-4 mb-3 border-0">
+                        @*<div class="sidebar-widget search card p-4 mb-3 border-0">
                             <input type="text" class="form-control" placeholder="search">
                             <a href="#" class="btn btn-mian btn-small d-block mt-2">search</a>
                         </div>
@@ -123,40 +76,43 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
-
+                        </div>*@
+                            
                         <div class="sidebar-widget latest-post card border-0 p-4 mb-3">
                             <h5>Latest Posts</h5>
 
-                            <div class="media border-bottom py-3">
-                                <a href="#"><img class="mr-4" src="images/blog/bt-3.jpg" alt=""></a>
-                                <div class="media-body">
-                                    <h6 class="my-2"><a href="#">Thoughtful living in los Angeles</a></h6>
-                                    <span class="text-sm text-muted">03 Mar 2018</span>
+                            @foreach (var item in Model.Reverse())
+                            {
+                                <div class="media border-bottom py-3">
+                                    <a href="BlogDetails/@item.Id"><img class="mr-4" src="@item.Thumbnail" alt="" style="width:50px; height:50px"></a>
+                                    <div class="media-body">
+                                        <h6 class="my-2"><a href="BlogDetails/@item.Id">@item.Title</a></h6>
+                                        @*<span class="text-sm text-muted">03 Mar 2018</span>*@
+                                    </div>
                                 </div>
-                            </div>
+                            }
 
-                            <div class="media border-bottom py-3">
-                                <a href="#"><img class="mr-4" src="images/blog/bt-2.jpg" alt=""></a>
-                                <div class="media-body">
-                                    <h6 class="my-2"><a href="#">Vivamus molestie gravida turpis.</a></h6>
-                                    <span class="text-sm text-muted">03 Mar 2018</span>
-                                </div>
-                            </div>
+                            @*<div class="media border-bottom py-3">
+            <a href="#"><img class="mr-4" src="images/blog/bt-2.jpg" alt=""></a>
+            <div class="media-body">
+                <h6 class="my-2"><a href="#">Vivamus molestie gravida turpis.</a></h6>
+                <span class="text-sm text-muted">03 Mar 2018</span>
+            </div>
+        </div>
 
-                            <div class="media py-3">
-                                <a href="#"><img class="mr-4" src="images/blog/bt-1.jpg" alt=""></a>
-                                <div class="media-body">
-                                    <h6 class="my-2"><a href="#">Fusce lobortis lorem at ipsum semper sagittis</a></h6>
-                                    <span class="text-sm text-muted">03 Mar 2018</span>
-                                </div>
-                            </div>
+        <div class="media py-3">
+            <a href="#"><img class="mr-4" src="images/blog/bt-1.jpg" alt=""></a>
+            <div class="media-body">
+                <h6 class="my-2"><a href="#">Fusce lobortis lorem at ipsum semper sagittis</a></h6>
+                <span class="text-sm text-muted">03 Mar 2018</span>
+            </div>
+        </div>*@
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="row mt-5">
+            @*<div class="row mt-5">
                 <div class="col-lg-8">
                     <nav class="navigation pagination py-2 d-inline-block">
                         <div class="nav-links">
@@ -167,7 +123,7 @@
                         </div>
                     </nav>
                 </div>
-            </div>
+            </div>*@
         </div>
     </section>
 </div>
