--- a/SurveyEducation/Views/Home/BlogDetails.cshtml
+++ b/SurveyEducation/Views/Home/BlogDetails.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿@model SurveyEducation.Models.Blog
+
 <div class="main-wrapper ">
-    <section class="page-title bg-1">
+    @*<section class="page-title bg-1">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -16,36 +17,30 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>*@
 
 
 
     <section class="section blog-wrap bg-gray">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-10 d-flex align-items-center" style="margin:0 auto">
                     <div class="row">
                         <div class="col-lg-12 mb-5">
                             <div class="single-blog-item">
-                                <img src="images/blog/2.jpg" alt="" class="img-fluid rounded">
+                                <img src="@Html.DisplayFor(model => model.Thumbnail)" alt="" class="img-fluid rounded" style="width:920px">
 
                                 <div class="blog-item-content bg-white p-5">
-                                    <div class="blog-item-meta bg-gray py-1 px-2">
+                                    @*<div class="blog-item-meta bg-gray py-1 px-2">
                                         <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Creativity</span>
                                         <span class="text-muted text-capitalize mr-3"><i class="ti-comment mr-2"></i>5 Comments</span>
                                         <span class="text-black text-capitalize mr-3"><i class="ti-time mr-1"></i> 28th January</span>
-                                    </div>
+                                    </div>*@
 
-                                    <h2 class="mt-3 mb-4"><a href="blog-single.html">Improve design with typography?</a></h2>
-                                    <p class="lead mb-4">Non illo quas blanditiis repellendus laboriosam minima animi. Consectetur accusantium pariatur repudiandae!</p>
+                                    <h2 class="mt-3 mb-4"><a href="blog-single.html">@Html.DisplayFor(model => model.Title)</a></h2>
+                                    <p class="lead mb-4">@Html.DisplayFor(model => model.Description)</p>
 
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus natus, consectetur? Illum libero vel nihil nisi quae, voluptatem, sapiente necessitatibus distinctio voluptates, iusto qui. Laboriosam autem, nam voluptate in beatae.</p>
-
-                                    <h3 class="quote">A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.</h3>
-
-                                    <p class="lead mb-4 font-weight-normal text-black">The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically.</p>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, rerum beatae repellat tenetur incidunt quisquam libero dolores laudantium. Nesciunt quis itaque quidem, voluptatem autem eos animi laborum iusto expedita sapiente.</p>
+                                    <p>@Html.DisplayFor(model => model.Content)</p>
 
                                     <div class="tag-option mt-5 clearfix">
                                         <ul class="float-left list-inline">
@@ -68,7 +63,7 @@
                         </div>
 
 
-                        <div class="col-lg-12 mb-5">
+                        @*<div class="col-lg-12 mb-5">
                             <div class="posts-nav bg-white p-5 d-lg-flex d-md-flex justify-content-between ">
                                 <a class="post-prev align-items-center" href="#">
                                     <div class="posts-prev-item mb-4 mb-lg-0">
@@ -88,9 +83,9 @@
                                     </div>
                                 </a>
                             </div>
-                        </div>
+                        </div>*@
 
-                        <div class="col-lg-12 mb-5">
+                        @*<div class="col-lg-12 mb-5">
                             <div class="comment-area card border-0 p-5">
                                 <h4 class="mb-4">2 Comments</h4>
                                 <ul class="comment-tree list-unstyled">
@@ -154,17 +149,17 @@
 
                                 <input class="btn btn-main btn-round-full" type="submit" name="submit-contact" id="submit_contact" value="Submit Message">
                             </form>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="sidebar-wrap">
-                        <div class="sidebar-widget search card p-4 mb-3 border-0">
+                <!--<div class="col-lg-4">
+                    <div class="sidebar-wrap">-->
+                        @*<div class="sidebar-widget search card p-4 mb-3 border-0">
                             <input type="text" class="form-control" placeholder="search">
                             <a href="#" class="btn btn-mian btn-small d-block mt-2">search</a>
-                        </div>
+                        </div>*@
 
-                        <div class="sidebar-widget card border-0 mb-3">
+                        @*<div class="sidebar-widget card border-0 mb-3">
                             <img src="images/blog/blog-author.jpg" alt="" class="img-fluid">
                             <div class="card-body p-4 text-center">
                                 <h5 class="mb-0 mt-4">Arther Conal</h5>
@@ -189,9 +184,9 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div>*@
 
-                        <div class="sidebar-widget latest-post card border-0 p-4 mb-3">
+                        <!--<div class="sidebar-widget latest-post card border-0 p-4 mb-3">
                             <h5>Latest Posts</h5>
 
                             <div class="media border-bottom py-3">
@@ -217,9 +212,9 @@
                                     <span class="text-sm text-muted">03 Mar 2018</span>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
 
-                        <div class="sidebar-widget bg-white rounded tags p-4 mb-3">
+                        @*<div class="sidebar-widget bg-white rounded tags p-4 mb-3">
                             <h5 class="mb-4">Tags</h5>
 
                             <a href="#">Web</a>
@@ -230,9 +225,9 @@
                             <a href="#">Marketing</a>
                             <a href="#">Social Media</a>
                             <a href="#">Branding</a>
-                        </div>
-                    </div>
-                </div>
+                        </div>*@
+                    <!--</div>
+                </div>-->
             </div>
         </div>
     </section>
