--- a/SurveyEducation/Views/Home/Contact.cshtml
+++ b/SurveyEducation/Views/Home/Contact.cshtml
@@ -1,49 +1,57 @@
-﻿<div class="main-wrapper ">
-    <section class="page-title bg-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="block text-center">
-                        <span class="text-white">Contact Us</span>
-                        <h1 class="text-capitalize mb-4 text-lg">Get in Touch</h1>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
-                            <li class="list-inline-item"><span class="text-white">/</span></li>
-                            <li class="list-inline-item"><a href="#" class="text-white-50">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+﻿@model SurveyEducation.Models.Contact
+
+@{
+    ViewBag.Title = "Contact";
+}
+
+<div class="main-wrapper ">
+
     <!-- contact form start -->
     <section class="contact-form-wrap section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <form id="contact-form" class="contact__form" method="post" action="mail.php">
-                        <!-- form message -->
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="alert alert-success contact__msg" style="display: none" role="alert">
-                                    Your message was sent successfully.
+                    <h2>Gửi phản hồi</h2>
+
+
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+
+                        <div class="form-horizontal">
+                            <hr />
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Message, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.Message, new { htmlAttributes = new { @class = "form-control", @style = "Height:150px" } })
+                                    @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" value="Send" class="btn btn-success" />
                                 </div>
                             </div>
                         </div>
-                        <!-- end message -->
-                        <span class="text-color">Gửi tin nhắn </span>
-                        <h3 class="text-md mb-4">Thông tin liên hệ  </h3>
-                        <div class="form-group">
-                            <input name="name" type="text" class="form-control" placeholder="Your Name">
-                        </div>
-                        <div class="form-group">
-                            <input name="email" type="email" class="form-control" placeholder="Email Address">
-                        </div>
-                        <div class="form-group-2 mb-4">
-                            <textarea name="message" class="form-control" rows="4" placeholder="Your Message"></textarea>
-                        </div>
-                        <button class="btn btn-main" name="submit" type="submit">Send Message</button>
-                    </form>
+                    }
                 </div>
 
                 <div class="col-lg-5 col-sm-12">
@@ -53,7 +61,7 @@
 
                         <ul class="address-block list-unstyled">
                             <li>
-                                <i class="ti-direction mr-3"></i>North Main Street,Brooklyn Australia
+                                <i class="ti-direction mr-3"></i>Số 8 Tôn Thất Thuyết, Hà Nội
                             </li>
                             <li>
                                 <i class="ti-email mr-3"></i>Email: contact@mail.com
@@ -81,7 +89,9 @@
     </section>
 
     <div class="google-map">
-        <div id="map"></div>
+        <div style="width:max-content">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.1013994271125!2d105.77964371488339!3d21.028628385998466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b32ecb92db%3A0x3964e6238a3bd088!2zOCBUw7RuIFRo4bqldCBUaHV54bq_dCwgTeG7uSDEkMOsbmgsIEPhuqd1IEdp4bqleSwgSMOgIE7hu5lpLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1651816132110!5m2!1svi!2s" width="1520" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </div>
     <!-- footer Start -->
     @Html.Partial("_Footer")
