--- a/SurveyEducation/Views/Home/Details.cshtml
+++ b/SurveyEducation/Views/Home/Details.cshtml
@@ -2,6 +2,16 @@
 @{
     var checkUser = Session["UserName"] != null;
 }
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
+
 <div class="col-lg-12 mb-5">
     <div class="single-blog-item">
         <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300" alt="" class="img-fluid rounded d-flex align-items-center mt-4 col-md-8" style="margin: 0 auto;padding:0 50px">
