--- a/SurveyEducation/Areas/Admin/Views/Survey/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Index.cshtml
@@ -21,7 +21,7 @@
         <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Quản lý Survey /</span> Danh sách Survey</h4>
     </div>
     <div class="row m-3">
-        @using (Html.BeginForm("Index", "Accounts", FormMethod.Get, new { @class = "col-md-6" }))
+        @using (Html.BeginForm("Index", "Survey", FormMethod.Get, new { @class = "col-md-6" }))
         {
             <div class="form-group d-flex">
                 <label class="col-md-3 mt-2">Find by keyword</label>
