--- a/SurveyEducation/Areas/Admin/Views/Survey/StatisticSurveys.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/StatisticSurveys.cshtml
@@ -4,7 +4,7 @@
     <!-- Basic Bootstrap Table -->
     <div class="card">
         <h5 class="card-header">Báo cáo thống kê</h5>
-        <div class="table-responsive text-nowrap">
+        <div class="">
             <table class="table">
                 <thead>
                     <tr>
