--- a/SurveyEducation/Views/Home/Index.cshtml
+++ b/SurveyEducation/Views/Home/Index.cshtml
@@ -36,15 +36,15 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="intro-item mb-5 mb-lg-0">
                         <i class="ti-medall color-one"></i>
-                        <h4 class="mt-4 mb-3">Tìm giải pháp bảo vệ môi trường</h4>
-                        <p> Những ý kiến người dùng đưa ra chúng tôi sẽ áp dụng vào thực tế nhằm cải tiện môi trường sống .</p>
+                        <h4 class="mt-4 mb-3">Tìm giải pháp học tập hiệu quả hơn</h4>
+                        <p> Những ý kiến người dùng đưa ra chúng tôi sẽ áp dụng vào thực tế để có cái nhìn tổng quan hơn khi giải quyết một vấn đề.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="intro-item">
                         <i class="ti-layers-alt color-one"></i>
-                        <h4 class="mt-4 mb-3">Kêu gọi mọi người trong mọi độ tuổi chung tay bảo vệ môi trường.</h4>
-                        <p>Hãy cùng nhau kêu gọi mọi người trong cộng đồng chung tay bảo vệ môi trường để có một thế giới toàn màu xanh .</p>
+                        <h4 class="mt-4 mb-3">Kêu gọi mọi người trong mọi độ tuổi cùng tham gia.</h4>
+                        <p>Hãy cùng nhau kêu gọi mọi người trong cộng đồng cùng tham gia thực hiện đóng góp ý kiến.</p>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                         <h2 class="mt-3 mb-4 position-relative content-title">Chúng tôi là người tạo ra các cuộc khảo sát</h2>
                         <div class="about-content">
                             <h4 class="mb-3 position-relative">Chúng tôi là người tạo ra các cuộc khảo sát</h4>
-                            <p class="mb-5">Chúng tôi cung cấp các khảo sát thực tế sát với thực tế hiện nay nhất, để người tham gia khảo sát có thể đưa ra giải pháp tốt nhất để khắc phục tình trạng khó xử xung quanh cuộc sống hàng ngày ...</p>
+                            <p class="mb-5">Chúng tôi cung cấp các khảo sát thực tế sát với thực tế hiện nay nhất, để người tham gia khảo sát có thể đưa ra giải pháp tốt nhất khi tiếp cận với nền giáo dục đang phát triển ...</p>
 
                             <a href="#" class="btn btn-main btn-round-full">Bắt đâù </a>
                         </div>
