--- a/SurveyEducation/Views/Home/Blog.cshtml
+++ b/SurveyEducation/Views/Home/Blog.cshtml
@@ -27,15 +27,15 @@
                         {
                             <div class="col-lg-6 col-md-6 mb-5">
                                 <div class="blog-item">
-                                    <img src="@item.Thumbnail" alt="" class="img-fluid rounded">
+                                    <img src="@item.Thumbnail" alt="" class="img-fluid rounded" style="width:350px;height:210px">
 
                                     <div class="blog-item-content bg-white p-4">
                                         @*<div class="blog-item-meta  py-1 px-2">
                                             <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Creativity</span>
                                         </div>*@
 
-                                        <h3 class="mt-3 mb-3"><a href="BlogDetails/@item.Id">@item.Title</a></h3>
-                                        <p class="mb-4">@item.Description</p>
+                                        <h3 class="mt-3 mb-3" style="height:100px"><a href="BlogDetails/@item.Id">@item.Title</a></h3>
+                                        <p class="mb-4" style="height:150px">@item.Description</p>
 
                                         <a href="BlogDetails/@item.Id" class="btn btn-small btn-main btn-round-full">Learn More</a>
                                     </div>
@@ -81,7 +81,7 @@
                         <div class="sidebar-widget latest-post card border-0 p-4 mb-3">
                             <h5>Latest Posts</h5>
 
-                            @foreach (var item in Model.Reverse())
+                            @foreach (var item in Model.Reverse().Take(4))
                             {
                                 <div class="media border-bottom py-3">
                                     <a href="BlogDetails/@item.Id"><img class="mr-4" src="@item.Thumbnail" alt="" style="width:50px; height:50px"></a>
