--- a/SurveyEducation/Areas/Admin/Views/Accounts/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Accounts/Create.cshtml
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="form-group col-md-6">
-                    @Html.LabelFor(model => model.PasswordHash, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <label class="control-label col-md-3">Password</label>
                     <div class="col-md-12">
                         @Html.EditorFor(model => model.PasswordHash, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.PasswordHash, "", new { @class = "text-danger" })
@@ -33,7 +33,7 @@
             </div>
             <div class="row mt-2">
                 <div class="form-group col-md-6">
-                    @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <label class="control-label col-md-3">Phone</label>
                     <div class="col-md-12">
                         @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
@@ -67,7 +67,8 @@
             </div>
             <div class="row mt-2">
                 <div class="form-group col-md-6">
-                    @Html.LabelFor(model => model.RoleNumber, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <label class="control-label col-md-3">Role Number</label>
+                    
                     <div class="col-md-12">
                         @Html.EditorFor(model => model.RoleNumber, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.RoleNumber, "", new { @class = "text-danger" })
@@ -75,7 +76,8 @@
                 </div>
 
                 <div class="form-group col-md-6">
-                    @Html.LabelFor(model => model.EmployeeNumber, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <label class="control-label col-md-4">Employee Number</label>
+                    
                     <div class="col-md-12">
                         @Html.EditorFor(model => model.EmployeeNumber, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.EmployeeNumber, "", new { @class = "text-danger" })
@@ -85,17 +87,19 @@
 
             <div class="row mt-2">
                 <div class="form-group col-md-6">
-                    @Html.LabelFor(model => model.AddmissionDate, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <label class="control-label col-md-3">Addmission Date</label>
+                    
                     <div class="col-md-12">
-                        @Html.EditorFor(model => model.AddmissionDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.AddmissionDate, new { htmlAttributes = new { @class = "form-control", @type = "date" } })
                         @Html.ValidationMessageFor(model => model.AddmissionDate, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group col-md-6 ">
-                    @Html.LabelFor(model => model.DateOfJoining, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <label class="control-label col-md-3">Date Of Joining</label>
+                    
                     <div class="col-md-12">
-                        @Html.EditorFor(model => model.DateOfJoining, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.DateOfJoining, new { htmlAttributes = new { @class = "form-control", @type = "date" } })
                         @Html.ValidationMessageFor(model => model.DateOfJoining, "", new { @class = "text-danger" })
                     </div>
                 </div>
