--- a/SurveyEducation/Views/Home/Contact.cshtml
+++ b/SurveyEducation/Views/Home/Contact.cshtml
@@ -47,7 +47,7 @@
 
                             <div class="form-group">
                                 <div class="col-md-offset-2 col-md-10">
-                                    <input type="submit" value="Send" class="btn btn-success" />
+                                    <input type="submit" value="Send" class="btn" style="background-color:#f75757; color: white"/>
                                 </div>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                 <div class="col-lg-5 col-sm-12">
                     <div class="contact-content pl-lg-5 mt-5 mt-lg-0">
                         <span class="text-muted">Chúng tôi có thể giúp gì cho bạn? </span>
-                        <h2 class="mb-5 mt-2">hãy liên hệ với chúng tôi để được hỗ trợ thêm bất kỳ thông tin nào</h2>
+                        <h2 class="mb-5 mt-2">Hãy liên hệ với chúng tôi để được hỗ trợ thêm bất kỳ thông tin nào</h2>
 
                         <ul class="address-block list-unstyled">
                             <li>
