--- a/SurveyEducation/Views/Shared/_Header.cshtml
+++ b/SurveyEducation/Views/Shared/_Header.cshtml
@@ -1,23 +1,27 @@
-﻿<header class="navigation">
+﻿@{
+    var checkUser = Session["UserName"] != null;
+}
+
+<header class="navigation">
     @*<div class="header-top ">
-        <div class="container">
-            <div class="row justify-content-between align-items-center">
-                <div class="col-lg-2 col-md-4">
-                    <div class="header-top-socials text-center text-lg-left text-md-left">
-                        <a href="https://www.facebook.com/themefisher" target="_blank"><i class="ti-facebook"></i></a>
-                        <a href="https://twitter.com/themefisher" target="_blank"><i class="ti-twitter"></i></a>
-                        <a href="https://github.com/themefisher/" target="_blank"><i class="ti-github"></i></a>
+            <div class="container">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-lg-2 col-md-4">
+                        <div class="header-top-socials text-center text-lg-left text-md-left">
+                            <a href="https://www.facebook.com/themefisher" target="_blank"><i class="ti-facebook"></i></a>
+                            <a href="https://twitter.com/themefisher" target="_blank"><i class="ti-twitter"></i></a>
+                            <a href="https://github.com/themefisher/" target="_blank"><i class="ti-github"></i></a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-10 col-md-8 text-center text-lg-right text-md-right">
-                    <div class="header-top-info">
-                        <a href="tel:+23-345-67890">Call Us : <span>+23-345-67890</span></a>
-                        <a href="mailto:support@gmail.com"><i class="fa fa-envelope mr-2"></i><span>support@gmail.com</span></a>
+                    <div class="col-lg-10 col-md-8 text-center text-lg-right text-md-right">
+                        <div class="header-top-info">
+                            <a href="tel:+23-345-67890">Call Us : <span>+23-345-67890</span></a>
+                            <a href="mailto:support@gmail.com"><i class="fa fa-envelope mr-2"></i><span>support@gmail.com</span></a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>*@
+        </div>*@
     <nav class="navbar navbar-expand-lg  py-4" id="navbar">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -43,10 +47,20 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="/Home/Contact">Contact</a></li>
                 </ul>
-                <form class="form-lg-inline my-2 my-md-0 ml-lg-4 text-center">
-                    <a href="/Account/Logout" class="btn btn-solid-border btn-round-full">Log out</a>
-                </form>
-            </div> 
+                @if (checkUser)
+                {
+                    <form class="form-lg-inline my-2 my-md-0 ml-lg-4 text-center">
+                        <a href="/Account/Logout" class="btn btn-solid-border btn-round-full">Log out</a>
+                    </form>
+                }
+                else
+                {
+                    <form class="form-lg-inline my-2 my-md-0 ml-lg-4 text-center">
+                        <a href="/Account/Login" class="btn btn-solid-border btn-round-full">Log in</a>
+                    </form>
+                }
+
+            </div>
         </div>
     </nav>
 </header>
