--- a/SurveyEducation/Views/Home/Details.cshtml
+++ b/SurveyEducation/Views/Home/Details.cshtml
@@ -28,9 +28,9 @@
             <ul data-box="questions-box" style="text-decoration: none"></ul>
             @if (checkUser)
             {
-                <span>
-                    <button  type="button" id="btnSubmitAnswer" class="btn btn-primary d-flex align-items-center btn-round" style=" margin: 0 auto">Submit</button>
-                </span>
+        <span>
+            <a href="/"><button type="button" id="btnSubmitAnswer" class="btn btn-primary d-flex align-items-center btn-round" style=" margin: 0 auto">Submit</button></a>
+        </span>
             }
         </div>
     </div>
