--- a/SurveyEducation/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Accounts/Index.cshtml
@@ -33,123 +33,45 @@
                 <th>
                     Email
                 </th>
-                @*<th>
-                        EmailConfirmed
-                    </th>
-                    <th>
-                        PasswordHash
-                    </th>
-                    <th>
-                        SecurityStamp
-                    </th>*@
-                @*<th>
-                        PhoneNumber
-                    </th>*@
-                @*<th>
-                        PhoneNumberConfirmed
-                    </th>
-                    <th>
-                        TwoFactorEnabled
-                    </th>
-                    <th>
-                        LockoutEndDateUtc
-                    </th>
-                    <th>
-                        LockoutEnabled
-                    </th>
-                    <th>
-                        AccessFailedCount
-                    </th>*@
                 <th>
                     UserName
                 </th>
-                @* <th>
-                        Address
-                    </th>
-                    <th>
-                        Thumbnail
-                    </th>*@
                 <th>
-                    Status
+                    Phone
                 </th>
                 <th>
-                    RoleNumber
+                    Address
                 </th>
                 <th>
-                    EmployeeNumber
-                </th>
-                <th>
-                    AddmissionDate
-                </th>
-                <th>
-                    DateOfJoining
+                    Thumbnail
                 </th>
                 <th></th>
             </tr>
 
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Email)
-                    </td>
-                    @*<td>
-                            @Html.DisplayFor(modelItem => item.EmailConfirmed)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.PasswordHash)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.SecurityStamp)
-                        </td>*@
-                    @*<td>
-                            @Html.DisplayFor(modelItem => item.PhoneNumber)
-                        </td>*@
-                    @*<td>
-                            @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LockoutEnabled)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.AccessFailedCount)
-                        </td>*@
-                    <td>
-                        @Html.DisplayFor(modelItem => item.UserName)
-                    </td>
-                    @*<td>
-                            @Html.DisplayFor(modelItem => item.Address)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Thumbnail)
-                        </td>*@
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Status)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RoleNumber)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.EmployeeNumber)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AddmissionDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DateOfJoining)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning" })
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary mt-1" })
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger mt-1" })
-                    </td>
-                </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Thumbnail)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning mt-1" })
+                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success mt-1" })
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger mt-1" })
+            </td>
+        </tr>
             }
 
         </table>
