--- a/SurveyEducation/Areas/Admin/Views/Survey/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Index.cshtml
@@ -70,9 +70,9 @@
                             @Html.DisplayFor(modelItem => item.Tag)
                         </td>*@
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new {@class = "btn btn-warning" })
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary" })
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new {@class = "btn btn-warning mt-1" })
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success mt-1" })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger mt-1" })
                     </td>
                 </tr>
             }
