update-admin-layout

--- a/SurveyEducation/Views/Shared/_Head.cshtml
+++ b/SurveyEducation/Views/Shared/_Head.cshtml
@@ -6,7 +6,7 @@
 
     <meta name="author" content="themefisher.com">
 
-    <title>Megakit| Html5 Agency template</title>
+    <title>SurveyEducation</title>
 
     <!-- bootstrap.min css -->
     <link rel="stylesheet" href="~/Public/plugins/bootstrap/css/bootstrap.min.css">
