--- a/SurveyEducation/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Accounts/Index.cshtml
@@ -64,12 +64,12 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Thumbnail)
+                <img src="@Html.DisplayFor(modelItem => item.Thumbnail)" style="width:40px;height:40px" />
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning mt-1" })
-                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success mt-1" })
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger mt-1" })
+            <td class="d-flex justify-content-end">
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning m-1" })
+                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success m-1" })
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger m-1" })
             </td>
         </tr>
             }
