--- a/SurveyEducation/Areas/Admin/Views/Blogs/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Blogs/Index.cshtml
@@ -60,9 +60,9 @@
                         <img src="@Html.DisplayFor(modelItem => item.Thumbnail)" alt="Alternate Text" style="width:150px; height:120px"/>
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning" })
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary mt-1" })
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger mt-1" })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning m-1" })
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary m-1" })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger m-1" })
                     </td>
                 </tr>
             }
