--- a/SurveyEducation/Areas/Admin/Views/Contacts/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Contacts/Index.cshtml
@@ -55,10 +55,10 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Message)
                     </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning mt-1" })
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary mt-1" })
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger mt-1" })
+                    <td class="d-flex justify-content-end">
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning m-1" })
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary m-1" })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger m-1" })
                     </td>
                 </tr>
             }
