--- a/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
@@ -1,6 +1,6 @@
 ﻿<aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
     <div class="app-brand demo">
-        <a href="#" class="app-brand-link">
+        <a href="/Admin/Survey" class="app-brand-link">
             <span class="app-brand-logo demo">
                 <svg width="25"
                      viewBox="0 0 25 42"
@@ -55,9 +55,9 @@
     <div class="menu-inner-shadow"></div>
 
     <ul class="menu-inner py-1">
-        <li class="menu-item active">
+        @*<li class="menu-item active">
             @Html.ActionLink("Dashboard", "Index", "Dashboard", routeValues: null, htmlAttributes: new { @class = "menu-link" })
-        </li>
+        </li>*@
         <li class="menu-header small text-uppercase">
             <span class="menu-header-text">Admin</span>
         </li>
