--- a/SurveyEducation/Areas/Admin/Views/Survey/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Index.cshtml
@@ -69,10 +69,10 @@
                     @* <td>
                             @Html.DisplayFor(modelItem => item.Tag)
                         </td>*@
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new {@class = "btn btn-warning mt-1" })
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success mt-1" })
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger mt-1" })
+                    <td class="d-flex justify-content-end">
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new {@class = "btn btn-warning m-1" })
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success m-1" })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger m-1" })
                     </td>
                 </tr>
             }
