--- a/SurveyEducation/Views/Home/Survey.cshtml
+++ b/SurveyEducation/Views/Home/Survey.cshtml
@@ -7,7 +7,7 @@
             {
                 <div class="col-lg-6 col-md-6 mb-5">
                     <div class="blog-item">
-                        <img src="https://jes.edu.vn/wp-content/uploads/2017/10/h%C3%ACnh-%E1%BA%A3nh.jpg" alt="" class="img-fluid rounded">
+                        @*<img src="https://jes.edu.vn/wp-content/uploads/2017/10/h%C3%ACnh-%E1%BA%A3nh.jpg" alt="" class="img-fluid rounded">*@
 
                         <div class="blog-item-content bg-white p-5">
                             <div class="blog-item-meta bg-gray py-1 px-2">
@@ -17,8 +17,8 @@
                                 <span class="text-black text-capitalize mr-3"><i class="ti-time mr-1"></i> @item.EndTime</span>
                             </div>
 
-                            <h3 class="mt-3 mb-3"><a href="blog-single.html">@item.Name</a></h3>
-                            <p class="mb-4">@item.Description</p>
+                            <h3 class="mt-3 mb-3" style="height:100px"><a href="blog-single.html">@item.Name</a></h3>
+                            <p class="mb-4" style="height:200px">@item.Description</p>
 
                             <a href="Details/@item.Id" class="btn btn-small btn-main btn-round-full">Learn More</a>
                         </div>
